修正地址即页面命名问题。

--- a/Education.html
+++ b/Education.html
@@ -30,7 +30,7 @@
     <div id="moduleHeader">
         <div id="nav"></div>
         <br>
-        <div class="moduleTitle">Human Practice</div>
+        <div class="moduleTitle">Human Practices</div>
         <div class="subModule">
             <span>Education</span>
         </div>
