--- a/HumanPractices.html
+++ b/HumanPractices.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Human Practice</title>
+    <title>Human Practices</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
@@ -30,9 +30,9 @@
     <div id="moduleHeader">
         <div id="nav"></div>
         <br>
-        <div class="moduleTitle">Human Practice</div>
+        <div class="moduleTitle">Human Practices</div>
         <div class="subModule">
-            <span>Human Practice</span>
+            <span>Human Practices</span>
         </div>
     </div>
 
