--- a/indexPage.html
+++ b/indexPage.html
@@ -168,17 +168,17 @@
             </div>
             <div class="tr">
                 <div class="td">
-                    <a href="http://2018.igem.org/Team:DLUT_China_B/AppliedDesign">
+                    <a href="http://2018.igem.org/Team:DLUT_China_B/Applied_Design">
                         <!--<img src="img/Circle4.png" width="250">-->
                         <img src="http://2018.igem.org/wiki/images/7/71/T--DLUT_China_B--Circle4.png" width="250">
                         <div>Awards</div>
                     </a>
                 </div>
                 <div class="td">
-                    <a href="http://2018.igem.org/Team:DLUT_China_B/HumanPractice">
+                    <a href="http://2018.igem.org/Team:DLUT_China_B/Human_Practices">
                         <!--<img src="img/Circle5.png" width="250">-->
                         <img src="http://2018.igem.org/wiki/images/6/63/T--DLUT_China_B--Circle5.png" width="250">
-                        <div>Human Practice</div>
+                        <div>Human Practices</div>
                     </a>
                 </div>
                 <div class="td">
@@ -280,8 +280,8 @@
                             answer: "awards"
                         },
                         {
-                            question: "Human Practice",
-                            answer: "humanPractice"
+                            question: "Human Practices",
+                            answer: "humanPractices"
                         },
                         {
                             question: "Teamwork and Cooperation",
