--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         </div>
         <div class="tr">
             <div class="td">
-                <a href="http://2018.igem.org/Team:DLUT_China_B/AppliedDesign">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/Applied_Design">
                     <!--<img src="img/Circle4.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/7/71/T--DLUT_China_B--Circle4.png" width="250">
                     <div>Awards</div>
                 </a>
             </div>
             <div class="td">
-                <a href="http://2018.igem.org/Team:DLUT_China_B/HumanPractice">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/Human_Practices">
                     <!--<img src="img/Circle5.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/6/63/T--DLUT_China_B--Circle5.png" width="250">
-                    <div>Human Practice</div>
+                    <div>Human Practices</div>
                 </a>
             </div>
             <div class="td">
@@ -217,8 +217,8 @@
                         answer: "awards"
                     },
                     {
-                        question: "Human Practice",
-                        answer: "humanPractice"
+                        question: "Human Practices",
+                        answer: "humanPractices"
                     },
                     {
                         question: "Teamwork and Cooperation",
@@ -340,8 +340,8 @@
                         answer: "awards"
                     },
                     {
-                        question: "Human Practice",
-                        answer: "humanPractice"
+                        question: "Human Practices",
+                        answer: "humanPractices"
                     },
                     {
                         question: "Teamwork and Cooperation",
@@ -412,16 +412,16 @@
                     }
                 ]
             },
-            "humanPractice": {
+            "humanPractices": {
                 says: [
                     "We are committed to education and publicity.",
-                    "Choose \"Learn more\" and you will arrive at Human Practice.",
+                    "Choose \"Learn more\" and you will arrive at Human Practices.",
                     "Choose \"Back\", the destination will be reset."
                 ],
                 reply: [
                     {
                         question: "Learn more",
-                        answer: "goHumanPractice"
+                        answer: "goHumanPractices"
                     },
                     {
                         question: "Back",
@@ -469,10 +469,10 @@
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization";
         };
         goAwards = function () {
-            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/AppliedDesign";
+            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Applied_Design";
         };
-        goHumanPractice = function () {
-            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/HumanPractice";
+        goHumanPractices = function () {
+            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Human_Practices";
         };
         goTeamworkAndCooperation = function () {
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/TeamMembers";
