--- a/TeamMembers.html
+++ b/TeamMembers.html
@@ -15,7 +15,7 @@
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/team.css&action=raw&ctype=text/css">-->
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
@@ -40,8 +40,8 @@
                 <div class="td" id="img1">
                     <!--<img src="img/Team/14.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/b/bd/T--DLUT_China_B--Team14.jpg">
-                    <div id="part1"><div class="intro"><p>Intro1</p></div></div>
-                    <div id="part2"><div class="intro"><p>Intro2</p></div></div>
+                    <div id="part1"><div class="intro"><p>Hello, everyone. I'm Han Xue, a junior student whose hairline is getting higher and higher. I'm mainly responsible for the Human Practice. I participated in the iGEM for the first time and made progress during the competition.</p></div></div>
+                    <div id="part2"><div class="intro"><p>I'm Xie Yan, student leader of DLUT_China_B. I'm abiomacromule fan. I'm glad that you're interested in our project. Email: xieyan7736@163.com</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
@@ -49,13 +49,13 @@
                 <div class="td" id="img2">
                     <!--<img src="img/Team/6.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/e/ef/T--DLUT_China_B--Team6.jpg">
-                    <div class="intro"><p>Intro3</p></div>
+                    <div class="intro"><p>I am Weixu, from Dalian University of Technology. My major is Chemistry. In our project, I am in charge of liquid crystal experiment.</p></div>
                 </div>
                 <div class="td"></div>
                 <div class="td" id="img3">
                     <!--<img src="img/Team/7.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/8/88/T--DLUT_China_B--Team7.jpg">
-                    <div class="intro"><p>Intro4</p></div>
+                    <div class="intro"><p>I'm Zheng Ruichao, in charge of the development of Wiki for our team. Major in software engineering, I enjoy coding and programming very much. For me, it's also challenge to take part in iGEM this time.</p></div>
                 </div>
             </div>
             <div class="tr">
@@ -63,8 +63,8 @@
                 <div class="td" id="img4">
                     <!--<img src="img/Team/17.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/0/09/T--DLUT_China_B--Team17.jpg">
-                    <div id="part3"><div class="intro"><p>Intro5</p></div></div>
-                    <div id="part4"><div class="intro"><p>Intro6</p></div></div>
+                    <div id="part3"><div class="intro"><p>Peng Xilei, an engineering student from an engineering school who pursues science.</p></div></div>
+                    <div id="part4"><div class="intro"><p>I am Shu Xun, a 20-year-old who likes to paint. I hope to make friends with you.</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
@@ -73,13 +73,13 @@
                 <div class="td" id="img5">
                     <!--<img src="img/Team/16.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/6/69/T--DLUT_China_B--Team16.jpg">
-                    <div class="intro"><p>Intro7</p></div>
+                    <div class="intro"><p>Zhu Jinwei, a junior student majoring in Life Science and Technology. I have got a lot of fun from working with our team members. I enjoy every night from the lab to the dormitory. The school feels clean this time of night. Just empty streets and me.</p></div>
                 </div>
                 <div class="td"></div>
                 <div class="td" id="img6">
                     <!--<img src="img/Team/5.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/1/1a/T--DLUT_China_B--Team5.jpg">
-                    <div class="intro"><p>Intro8</p></div>
+                    <div class="intro"><p>My name is Xu Kang, a 3rd year biology engineering student, from school of life science and technology, Dalian University of Tcehnology. In our team, I am mainly responsible for the wet experiment, including interlab. In life, I like running and hiking. My favorite poem is find a moment of leisure in a busy life.</p></div>
                 </div>
             </div>
             <div class="tr">
@@ -87,9 +87,9 @@
                 <div class="td" id="img7">
                     <!--<img src="img/Team/12.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/9/99/T--DLUT_China_B--Team12.jpg">
-                    <div id="part5"><div class="intro"><p>Int o9Int ro9Int ro9Int ro9Int ro9I ntro9In tro9Intro9In tro 9Intro 9Intr o9Intro9Int ro9In tro9Int ro9In tro9</p></div></div>
-                    <div id="part6"><div class="intro"><p>Intro10</p></div></div>
-                    <div id="part7"><div class="intro"><p>Intro11</p></div></div>
+                    <div id="part5"><div class="intro"><p>Active, talkative, enthusiastic about almost everything, but also shy, quiet and not brave enough. Do you want to know whom that strange girl is? Ah-ha, that's me! My name is Chen Kaidi, and you can also call me Cathy. I am a girl who love to try new things and challenge myself. Not only biology is in my interests, but I am fond of ancient Chinese and history as well. I enjoy fighting with a hard problem and discussing with my friends to explore the solution. I really really want to make friends with all of you explorers!</p></div></div>
+                    <div id="part6"><div class="intro"><p>I'm a pretty outgoing girl and have passionate interests in multiple spectrums of activities, particularly with swimming and paper-cut. The trademark of myself, is, an excellent teamwork player. The teamwork spirits always motivated me to explore the gifts inside myself and fully coordinate with the team members to attain the ultimate accomplishment.</p></div></div>
+                    <div id="part7"><div class="intro"><p>Zhiyue Wu: I am a sophomore from DLUT in PRC with an outgoing and diligent character, majoring in bio-engineering. It's my pleasure to have a chance to take part in IGEM from which I have learned a lot.</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
@@ -98,7 +98,7 @@
                 <div class="td" id="img8">
                     <!--<img src="img/Team/15.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Team15.jpg">
-                    <div id="part8"><div class="intro"><p>Intro12</p></div></div>
+                    <div id="part8"><div class="intro"><p>In order to learn more about synthetic biology and get touch with more people who are interested in biology, I participated in the iGEM team of my university. I played as an art designer and background researcher. Meanwhile, I will help lab group do some experiments and consult literatures. This experience is really meaningful to me.</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
@@ -107,8 +107,12 @@
                 <div class="td" id="img9">
                     <!--<img src="img/Team/10.jpg">-->
                     <img src="http://2018.igem.org/wiki/images/f/fb/T--DLUT_China_B--Team10.jpg">
-                    <div id="part9"><div class="intro"><p>Intro13</p></div></div>
-                    <div id="part10"><div class="intro"><p>Intro14</p></div></div>
+                    <div id="part9"><div class="intro">
+                        <p>Liu Hao, Girl.</p>
+                        <p>Dalian University of Technology - College of Life Science and Technology</p>
+                        <p>In youth, meet a group of like-minded people, together to do what others have not done.</p>
+                    </div></div>
+                    <div id="part10"><div class="intro"><p>I am Sun Mingze, a junior at Dalian university of technology. I like study. I am good at seeing the essence through appearances, grasping the core issues and putting forward my own opinions.</p></div></div>
                 </div>
                 <div class="td"></div>
             </div>
