--- a/Collaborations.html
+++ b/Collaborations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Collaboration</title>
+    <title>Collaborations</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
@@ -32,7 +32,7 @@
         <br>
         <div class="moduleTitle">Team</div>
         <div class="subModule">
-            <span>Collaboration</span>
+            <span>Collaborations</span>
         </div>
     </div>
 
