--- a/Parts.html
+++ b/Parts.html
@@ -17,6 +17,7 @@
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/parts.css&action=raw&ctype=text/css">-->
 
     <script src="js/jquery.js"></script>
     <!--<script src="js/slideshow.js"></script>-->
@@ -28,7 +29,7 @@
 </head>
 <body>
 <div id="dlutb">
-    <div id="moduleHeader">
+    <div id="moduleHeader" class="parts">
         <div id="nav"></div>
         <br>
         <div class="moduleTitle">Parts</div>
@@ -48,12 +49,14 @@
                 of aldehyde label. Firstly it can cambein with beta2 microglobulin because of antigen-antibody
                 interaction. Then its special lable allow fixed point fixing or other fixed point decoration
                 possible.</p>
-            <img src="img/Parts/Parts1.png">
+            <!--<img src="img/Parts/Parts1.png">-->
+            <img src="http://2018.igem.org/wiki/images/c/cc/T--DLUT_China_B--Parts1.png">
             <p>Another one is Formylglycine-generating enzyme(BBa_K2772018). FGE can specifically identify ald-Tag,
                 which is consisted of 6 base pair or 13 base pair, then it oxidze sulfhydryl group of sulfhydryl group
                 to aldehyde group. Conveniently, it can be used for in vivo catalysis of the substrate label of the
                 precursor, i.e. higher conversion can be achieved without purification separation.</p>
-            <img src="img/Parts/Parts2.png">
+            <!--<img src="img/Parts/Parts2.png">-->
+            <img src="http://2018.igem.org/wiki/images/1/11/T--DLUT_China_B--Parts2.png">
             <p>Here is the list of our submitted parts.</p>
             <table>
                 <thead>
