--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <script src="js/bubbles.js"></script>
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
@@ -40,11 +40,10 @@
     <div id="header">
         <div id="nav"></div>
         <div id="box">
-            <img src="img/Top1.png">
-            <!--<img src="http://2018.igem.org/wiki/images/4/47/T&#45;&#45;DLUT_China_B&#45;&#45;Top1.png">-->
+            <!--<img src="img/Top1.png">-->
+            <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Top1.png">
             <div id="word">
-                <h2>DLUT China B</h2>
-                <p>DLUT China B</p>
+                <p>Hello! I’m a lovely Kidney baby , an essential organ in your body. Can you see those sparkling items pointed by my hand? All right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea , right?</p>
             </div>
         </div>
         <!--<div id="box">-->
@@ -89,7 +88,7 @@
                 </a>
             </div>
             <div class="td">
-                <a href="http://2018.igem.org/Team:DLUT_China_B/PartsOverview">
+                <a href="http://2018.igem.org/Team:DLUT_China_B/Parts">
                     <!--<img src="img/Circle2.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/f/f0/T--DLUT_China_B--Circle2.png" width="250">
                     <div>Parts</div>
@@ -463,7 +462,7 @@
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Description";
         };
         goParts = function () {
-            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/PartsOverview";
+            window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Parts";
         };
         goModel = function () {
             window.location.href = "http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization";
